# eic_TDR

./: .gitignore  B0_tracking_MWE.cpp  B0_tracking_email.txt  CMakeLists.txt  DDIS_Combined_output.root  DDIS_Skim_Q2_output.root  DDIS_Skim_t_xp_output.root  Makefile  README.md  branches.txt  hasan.root  make_skimt.sh  proton_analysis.root  proton_mandelstam_analysis.root  run.sh
analysis/: DDIS_Plot_AllKinematics.cpp  DDIS_Plot_Combined.cpp  DDIS_Plot_t.cpp  DDIS_Plots_Q2_OOP.cpp  DDIS_Plots_Q2_OOP_allvars.cpp  DDIS_Plots_Q2_OOP_with_xy.cpp  DDIS_Plots_Q2_with_xy.cpp  DDIS_Skim_All.cpp  DDIS_Skim_Combined.cpp  DDIS_Skim_Q2.cpp  DDIS_Skim_Q2_with_xy.cpp  DDIS_Skim_t.cpp  DDIS_Skim_t_xP.cpp  inspect_tree  inspect_tree.cpp
data/: cmmnds.txt  filelist.txt
data/steering/: ewrad_100k_e10_p100_diff  ewrad_100k_e18_p275_diff  norad_100k_e10_p100_diff  qedrad_100k_e10_p100_diff
docs/: cmmnds.txt  info.txt
include/: DDIS_Util.hpp  Plotting.hpp  RecoMethods.hpp  Utility.hpp
plotting/: PlotOptions.cpp  PlotOptions1D.cpp  PlotOptionsBinnedRelRes.cpp  PlotOptionsCombinedCorrelation.cpp  PlotOptionsRelRes.cpp  PlotOptionsResponseMatrix.cpp  Plotting.cpp
scripts/: run_ddis.sh
utility/: RecoMethods.cpp  Utility.cpp  check_multiple_rp_protons.cpp  hepMC_event_parse_and_modify.py
